@@ -1,3 +1,9 @@
+2009-04-11  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+        * gtksourceview/gtksourcecompletion.c:
+        * gtksourceview/gtksourcecompletion.h:
+        Add completion_finish func.
+
 2009-04-10  Jesse van den Kieboom  <jessevdk@gnome.org>
 	
 	* gtksourceview/gtksourcecompletiontriggerkey.h:
